syntax = "proto3";

package pastel.pastelid;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "pastel/pastelid/params.proto";

option go_package = "github.com/pastelnetwork/pastel/x/pastelid/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;
  
  // UpdateParams defines a (governance) operation for updating the module
  // parameters. The authority defaults to the x/gov module account.
  rpc UpdateParams   (MsgUpdateParams  ) returns (MsgUpdateParamsResponse  );
  rpc CreatePastelId (MsgCreatePastelId) returns (MsgCreatePastelIdResponse);
}
// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) =                          "authority";
  option           (amino.name) = "pastel/x/pastelid/MsgUpdateParams";
  
  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // params defines the module parameters to update.
  
  // NOTE: All parameters must be supplied.
  Params params = 2 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}

message MsgCreatePastelId {
  option (cosmos.msg.v1.signer) = "creator";
  string creator   = 1;
  string idType    = 2;
  string pastelId  = 3;
  string pqKey     = 4;
  string signature = 5;
  string timeStamp = 6;
  uint64 version   = 7;
}

message MsgCreatePastelIdResponse {}

